Issue #2456779 by Gauravmahlawat: Theme not responsive to different screen sizes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,3 +60,7 @@ table {
   -ms-scroll-snap-type: x mandatory;
   scroll-snap-type: x mandatory;
 }
+
+.views-slideshow-cycle-main-frame {
+  max-width: 100%;
+}
